--- a/styles/world_cup.css
+++ b/styles/world_cup.css
@@ -1,5 +1,74 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+
+
+/* shared style */
+
+.btn-primary{
+    background-color: rgba(221, 0, 0, 1);
+    color: #FFFFFF;
+    width: 187px;
+    height: 56px;
+    border: none;
+    border-radius: 5px;
+    font-size: 1.25rem;
+    font-weight: 500px;
+    cursor: pointer;
+}
+
+
+.btn-primary:hover{
+    background-color: rgb(206, 80, 80);
+}
+
+
+
+/* hero section related styles */
+
+.hero{
+    background-color: rgba(22, 22, 22, 1);
+    max-width: 1414px;
+    height: 645px;
+    margin: 0px auto;
+    border-radius: 30px;
+    margin-top: 80px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.hero-text{
+    color: #FFFFFF;
+    max-width: 560px;
+    height: 430px;
+    align-items: center;
+    margin-top: 105px;
+    margin-left: 125px;
+}
+
+.hero-title{
+    max-width: 500px;
+    font-size: 4.375rem;
+    font-weight: 700px;
+    margin-bottom: 20px;
+}
+
+.hero-description{
+    width: 500px;
+    font-size: 1rem;
+    font-weight: 400px;
+    margin-bottom: 30px;
+}
+
+.hero-image{
+    margin-top: 33px;
+    margin-right: 17px;
 }
